# my-coding-challenges

./: .gitignore  extract_task_descriptions.py
daily-problems/: p4.py  p5.py
daily-problems/p6/: CMakeLists.txt  Element.cpp  Element.h  List.cpp  List.h  main.cpp
daily_problems/p4/: p4_test.py
daily_problems/p5/: p5_test.py
daily_problems/p6/: Element.h
descriptions/arrays/: array_count_nice_pair.py  array_daily_temps.py  average_neighbors.py  discount_shop.py  double_pairs.py  duplicates.py  identical_pairs.py  insert_interval.py  interestions.py  kdiff_pairs.py  kth_largest.py  longest_consecutive_seq.py  majority_element.py  merge_sorted_array.py  min_moves_equal_n.py  min_rotations_sort.py  missing_number.py  move_zeros.py  move_zeros_end.py  numbers_smaller.py  pair_sum.py  product_array_except_self.py  remove_duplicates.py  replace_largest_right_side_value.py  rotate.py  shuffle.py  single_number.py  smallest_number.py  sort_colors.py  squares_sorted_array.py  student_homework.py  subsets.py  subsets_II.py  sum.py  three_sum.py  two_sum.py  validate_subsequences.py
descriptions/backtracking/: combination_sum_II.py  combinations.py  partition_k_equal_subets.py  permutations.py  phone_number_combinations.py  unique_binary_string.py
descriptions/bellman-ford/: cheapest_flights_k_stops.py
descriptions/binary-search/: binary_search.py  bitonic_sequence.py  closest_number.py  find_first_last_index.py  peak_element.py  rotated_array_min_value.py  search_insert_target.py  (+1 more)
descriptions/binary-search-trees/: insert.py  search.py  validate.py
(+115 files in other folders)
